--- a/Netsphere/Netsphere.csproj
+++ b/Netsphere/Netsphere.csproj
@@ -6,21 +6,13 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <PackageId>LP</PackageId>
+    <PackageId>LP.Netsphere</PackageId>
     <Authors>archi-Doc</Authors>
-    <Product>LP</Product>
-    <Description>LP is an experimental program that create value.</Description>
+    <Product>Netsphere</Product>
+    <Description>Netsphere is a network protocol for LP.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/archi-Doc/LP</PackageProjectUrl>
     <RepositoryUrl>https://github.com/archi-Doc/LP</RepositoryUrl>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
@@ -28,11 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Netsphere\Netsphere.csproj" />
-    <ProjectReference Include="..\Zen\Zen.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <PackageReference Include="Arc.Threading" Version="0.6.2" />
+    <PackageReference Include="SimpleCommandLine" Version="0.5.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
