--- a/LPConsole/LPConsole.csproj
+++ b/LPConsole/LPConsole.csproj
@@ -1,18 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-  </PropertyGroup>
-
-  <PropertyGroup>
-    <PackageId>LP.Net</PackageId>
-    <Authors>archi-Doc</Authors>
-    <Product>Netsphere</Product>
-    <Description>Netsphere is a network protocol for LP.</Description>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/archi-Doc/LP</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/archi-Doc/LP</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
@@ -21,11 +12,19 @@
 
   <ItemGroup>
     <PackageReference Include="Arc.Threading" Version="0.7.1" />
+    <PackageReference Include="DryIoc.dll" Version="4.8.1" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="SimpleCommandLine" Version="0.5.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\LP\LP.csproj" />
   </ItemGroup>
 
 </Project>
