--- a/Sandbox/Sandbox.csproj
+++ b/Sandbox/Sandbox.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\LP\LP.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="DryIoc.dll" Version="4.8.1" />
+  </ItemGroup>
+
 </Project>
