--- a/LPBase/LPBase.csproj
+++ b/LPBase/LPBase.csproj
@@ -5,16 +5,6 @@
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
-  <PropertyGroup>
-    <PackageId>LP</PackageId>
-    <Authors>archi-Doc</Authors>
-    <Product>LP</Product>
-    <Description>LP is an experimental program that create value.</Description>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/archi-Doc/LP</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/archi-Doc/LP</RepositoryUrl>
-  </PropertyGroup>
-
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
@@ -28,17 +18,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LPBase\LPBase.csproj" />
-    <ProjectReference Include="..\Netsphere\Netsphere.csproj" />
-    <ProjectReference Include="..\Zen\Zen.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="DryIoc.dll" Version="4.8.1" />
+    <PackageReference Include="BigMachines" Version="0.11.3" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Tinyhand" Version="0.22.1" />
   </ItemGroup>
 
 </Project>
