--- a/LPBase/LPBase.csproj
+++ b/LPBase/LPBase.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Arc.Crypto" Version="1.2.0" />
     <PackageReference Include="BigMachines" Version="0.11.3" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
