--- a/LPBase/LPBase.csproj
+++ b/LPBase/LPBase.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -18,13 +18,17 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Arc.Threading" Version="0.7.1" />
     <PackageReference Include="Arc.Crypto" Version="1.2.0" />
-    <PackageReference Include="BigMachines" Version="0.11.3" />
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+    <PackageReference Include="BigMachines" Version="0.11.4" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.354">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Tinyhand" Version="0.22.1" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
+    <PackageReference Include="Tinyhand" Version="0.22.2" />
   </ItemGroup>
 
 </Project>
