--- a/LPBase/LPBase.csproj
+++ b/LPBase/LPBase.csproj
@@ -19,8 +19,10 @@
 
   <ItemGroup>
     <PackageReference Include="Arc.Threading" Version="0.7.1" />
-    <PackageReference Include="Arc.Crypto" Version="1.2.1" />
-    <PackageReference Include="BigMachines" Version="0.11.4" />
+    <PackageReference Include="Arc.Crypto" Version="1.2.2" />
+    <PackageReference Include="BigMachines" Version="0.12.0" />
+    <PackageReference Include="Tinyhand" Version="0.23.0" />
+    
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.354">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
