--- a/LPBase/LPBase.csproj
+++ b/LPBase/LPBase.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Arc.Collection" Version="0.12.0" />
     <PackageReference Include="Arc.Threading" Version="0.7.1" />
     <PackageReference Include="Arc.Crypto" Version="1.2.2" />
     <PackageReference Include="BigMachines" Version="0.12.0" />
