--- a/LPBase/LPBase.csproj
+++ b/LPBase/LPBase.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="Arc.Threading" Version="0.7.1" />
     <PackageReference Include="Arc.Crypto" Version="1.2.2" />
     <PackageReference Include="BigMachines" Version="0.13.0" />
+    <PackageReference Include="SimpleCommandLine" Version="0.5.0" />
     <PackageReference Include="Tinyhand" Version="0.23.0" />
     
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.354">
