--- a/LPConsole/LPConsole.csproj
+++ b/LPConsole/LPConsole.csproj
@@ -13,6 +13,10 @@
   <ItemGroup>
     <PackageReference Include="DryIoc.dll" Version="4.8.1" />
     <PackageReference Include="SimpleCommandLine" Version="0.5.0" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.354">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
