--- a/LP/LP.csproj
+++ b/LP/LP.csproj
@@ -3,9 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-  </PropertyGroup>
+    <RunAnalyzersDuringLiveAnalysis>False</RunAnalyzersDuringLiveAnalysis>
 
-  <PropertyGroup>
     <PackageId>LP</PackageId>
     <Authors>archi-Doc</Authors>
     <Product>LP</Product>
