--- a/Zen/Zen.csproj
+++ b/Zen/Zen.csproj
@@ -3,9 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-  </PropertyGroup>
+    <RunAnalyzersDuringLiveAnalysis>False</RunAnalyzersDuringLiveAnalysis>
 
-  <PropertyGroup>
     <PackageId>LP.Zen</PackageId>
     <Authors>archi-Doc</Authors>
     <Product>Zen</Product>
