--- a/Netsphere/Netsphere.csproj
+++ b/Netsphere/Netsphere.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="CrossLink" Version="0.17.0" />
     <PackageReference Include="SimpleCommandLine" Version="0.5.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.354">
       <PrivateAssets>all</PrivateAssets>
