--- a/LPBase/LPBase.csproj
+++ b/LPBase/LPBase.csproj
@@ -18,10 +18,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Arc.Collections" Version="1.0.1" />
+    <PackageReference Include="Arc.Collections" Version="1.0.2" />
     <PackageReference Include="Arc.Threading" Version="0.7.1" />
-    <PackageReference Include="Arc.Crypto" Version="1.4.0" />
+    <PackageReference Include="Arc.Crypto" Version="1.4.2" />
     <PackageReference Include="BigMachines" Version="0.13.1" />
+    <PackageReference Include="CrossLink" Version="0.17.0" />
     <PackageReference Include="SimpleCommandLine" Version="0.5.0" />
     <PackageReference Include="Tinyhand" Version="0.23.0" />
     
