--- a/LPBase/LPBase.csproj
+++ b/LPBase/LPBase.csproj
@@ -19,6 +19,7 @@
 
   <ItemGroup>
     <PackageReference Include="Arc.Collections" Version="1.0.2" />
+    <PackageReference Include="Arc.CrossChannel" Version="0.4.0" />
     <PackageReference Include="Arc.Threading" Version="0.7.1" />
     <PackageReference Include="Arc.Crypto" Version="1.4.2" />
     <PackageReference Include="BigMachines" Version="0.13.2" />
