--- a/LPBase/LPBase.csproj
+++ b/LPBase/LPBase.csproj
@@ -23,10 +23,9 @@
     <PackageReference Include="Arc.Threading" Version="0.7.1" />
     <PackageReference Include="Arc.Crypto" Version="1.4.2" />
     <PackageReference Include="BigMachines" Version="0.13.2" />
-    <PackageReference Include="CrossLink" Version="0.18.0" />
     <PackageReference Include="SimpleCommandLine" Version="0.5.0" />
     <PackageReference Include="Tinyhand" Version="0.23.0" />
-    
+    <PackageReference Include="ValueLink" Version="0.19.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.354">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
