--- a/Zen/Zen.csproj
+++ b/Zen/Zen.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
 
-    <PackageId>LP.Zen</PackageId>
+    <PackageId>Zen.LP</PackageId>
     <Authors>archi-Doc</Authors>
     <Product>Zen</Product>
     <Description>Zen is a storage engine for LP.</Description>
