--- a/Netsphere/Netsphere.csproj
+++ b/Netsphere/Netsphere.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LPBase\LPBase.csproj" />
+    <ProjectReference Include="..\LPEssentials\LPEssentials.csproj" />
   </ItemGroup>
 
 </Project>
