--- a/Zen/Zen.csproj
+++ b/Zen/Zen.csproj
@@ -33,4 +33,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\LPEssentials\LPEssentials.csproj" />
+  </ItemGroup>
+
 </Project>
