--- a/Tests/NetsphereTest/NetsphereTest.csproj
+++ b/Tests/NetsphereTest/NetsphereTest.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Netsphere\Netsphere.csproj" />
+    <ProjectReference Include="..\..\NetsphereGenerator\NetsphereGenerator.csproj" ReferenceOutputAssembly="false" OutputItemType="Analyzer" />
   </ItemGroup>
 
   <ItemGroup>
