--- a/Tests/NetsphereExternal/NetsphereExternal.csproj
+++ b/Tests/NetsphereExternal/NetsphereExternal.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\..\NetsphereGenerator\NetsphereGenerator.csproj" ReferenceOutputAssembly="false" OutputItemType="Analyzer" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Generated\*" />
+  </ItemGroup>
+
 </Project>
