--- a/Netsphere/Netsphere.csproj
+++ b/Netsphere/Netsphere.csproj
@@ -15,11 +15,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DefineConstants>$(DefineConstants)TRACE;LOG_FLOWCONTROL2</DefineConstants>
+    <DefineConstants>$(DefineConstants)TRACE;LOG_FLOWCONTROL</DefineConstants>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <DefineConstants>$(DefineConstants)TRACE;LOG_FLOWCONTROL2</DefineConstants>
+    <DefineConstants>$(DefineConstants)TRACE;LOG_FLOWCONTROL</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
