--- a/LP/LP.csproj
+++ b/LP/LP.csproj
@@ -22,19 +22,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="Server\**" />
-    <EmbeddedResource Remove="Server\**" />
-    <None Remove="Server\**" />
-  </ItemGroup>
-
-  <ItemGroup>
     <AdditionalFiles Include="..\stylecop.json" Link="stylecop.json" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Netsphere\Netsphere.csproj" />
     <ProjectReference Include="..\NetsphereGenerator\NetsphereGenerator.csproj" ReferenceOutputAssembly="false" OutputItemType="Analyzer" />
-    <ProjectReference Include="..\Zen\Zen.csproj" />
+    <ProjectReference Include="..\ZenItz\ZenItz.csproj" />
   </ItemGroup>
 
   <ItemGroup>
