--- a/.github/workflows/zenitz.yml
+++ b/.github/workflows/zenitz.yml
@@ -1,4 +1,4 @@
-name: Publish Zen
+name: Publish Zen/Itz
 on: workflow_dispatch
 
 jobs:
@@ -25,10 +25,10 @@ jobs:
       uses: rohith/publish-nuget@v2
       with:
         # Filepath of the project to be packaged, relative to root of repository
-        PROJECT_FILE_PATH: Zen/Zen.csproj
+        PROJECT_FILE_PATH: ZenItz/ZenItz.csproj
         
         # NuGet package id, used for version detection & defaults to project name
-        PACKAGE_NAME: Zen.LP
+        PACKAGE_NAME: Zen.Itz
         
         # Filepath with version info, relative to root of repository & defaults to PROJECT_FILE_PATH
         VERSION_FILE_PATH: Directory.Build.props
