--- a/Tests/ZenItzTest/ZenItzTest.csproj
+++ b/Tests/ZenItzTest/ZenItzTest.csproj
@@ -14,5 +14,9 @@
   <ItemGroup>
     <ProjectReference Include="..\..\ZenItz\ZenItz.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Compile Remove="Generated\*" />
+  </ItemGroup>
   
 </Project>
