--- a/xUnitTest/xUnitTest.csproj
+++ b/xUnitTest/xUnitTest.csproj
@@ -23,6 +23,7 @@
     <ProjectReference Include="..\LP\LP.csproj" />
     <ProjectReference Include="..\Netsphere\Netsphere.csproj" />
     <ProjectReference Include="..\NetsphereGenerator\NetsphereGenerator.csproj" ReferenceOutputAssembly="false" OutputItemType="Analyzer" />
+    <ProjectReference Include="..\ZenItz\ZenItz.csproj" />
   </ItemGroup>
 
   <ItemGroup>
