--- a/LPEssentials/LPEssentials.csproj
+++ b/LPEssentials/LPEssentials.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="Arc.Crypto" Version="1.8.0" />
     <PackageReference Include="BigMachines" Version="0.20.1" />
     <PackageReference Include="DryIoc.dll" Version="4.8.7" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="SimpleCommandLine" Version="0.9.1" />
     <PackageReference Include="Tinyhand" Version="0.28.3" />
     <PackageReference Include="ValueLink" Version="0.27.0" />
