--- a/.github/workflows/netsphere.yml
+++ b/.github/workflows/netsphere.yml
@@ -1,4 +1,4 @@
-name: Publish Netsphere
+name: Publish LPEssentials/Netsphere/ZenItz
 on: workflow_dispatch
 
 jobs:
@@ -19,37 +19,32 @@ jobs:
     - name: Test
       run: dotnet test --no-restore --verbosity normal
 
-      # Publish
-    - name: Publish on version change
-      id: publish_nuget
+    - name: Publish LPEssentials
+      id: publish_lpessentials
       uses: rohith/publish-nuget@v2
       with:
-        # Filepath of the project to be packaged, relative to root of repository
-        PROJECT_FILE_PATH: Netsphere/Netsphere.csproj
-        
-        # NuGet package id, used for version detection & defaults to project name
-        PACKAGE_NAME: Netsphere
-        
-        # Filepath with version info, relative to root of repository & defaults to PROJECT_FILE_PATH
+        PROJECT_FILE_PATH: LPEssentials/LPEssentials.csproj
+        PACKAGE_NAME: LPEssentials
         VERSION_FILE_PATH: Directory.Build.props
-
-        # Regex pattern to extract version info in a capturing group
         VERSION_REGEX: ^\s*<Version>(.*)<\/Version>\s*$
-        
-        # Useful with external providers like Nerdbank.GitVersioning, ignores VERSION_FILE_PATH & VERSION_REGEX
-        # VERSION_STATIC: 0.0.1
-
-        # Flag to toggle git tagging, enabled by default
-        # TAG_COMMIT: true
-
-        # Format of the git tag, [*] gets replaced with actual version
-        # TAG_FORMAT: v*
-
-        # API key to authenticate with NuGet server
         NUGET_KEY: ${{secrets.NUGET_API_KEY}}
 
-        # NuGet server uri hosting the packages, defaults to https://api.nuget.org
-        # NUGET_SOURCE: https://api.nuget.org
-
-        # Flag to toggle pushing symbols along with nuget package to the server, disabled by default
-        # INCLUDE_SYMBOLS: false
+    - name: Publish Netsphere
+      id: publish_netsphere
+      uses: rohith/publish-nuget@v2
+      with:
+        PROJECT_FILE_PATH: Netsphere/Netsphere.csproj
+        PACKAGE_NAME: Netsphere
+        VERSION_FILE_PATH: Directory.Build.props
+        VERSION_REGEX: ^\s*<Version>(.*)<\/Version>\s*$
+        NUGET_KEY: ${{secrets.NUGET_API_KEY}}
+        
+    - name: Publish ZenItz
+      id: publish_zenitz
+      uses: rohith/publish-nuget@v2
+      with:
+        PROJECT_FILE_PATH: ZenItz/ZenItz.csproj
+        PACKAGE_NAME: ZenItz
+        VERSION_FILE_PATH: Directory.Build.props
+        VERSION_REGEX: ^\s*<Version>(.*)<\/Version>\s*$
+        NUGET_KEY: ${{secrets.NUGET_API_KEY}}
