--- a/LP/LP.csproj
+++ b/LP/LP.csproj
@@ -26,6 +26,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="Strings\strings-en.tinyhand" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Netsphere\Netsphere.csproj" />
     <ProjectReference Include="..\NetsphereGenerator\NetsphereGenerator.csproj" ReferenceOutputAssembly="false" OutputItemType="Analyzer" />
     <ProjectReference Include="..\ZenItz\ZenItz.csproj" />
