--- a/LPConsole/LPConsole.csproj
+++ b/LPConsole/LPConsole.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="SampleUnit\strings-en.tinyhand" />
+    <None Remove="ExampleUnit\strings-en.tinyhand" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="SampleUnit\strings-en.tinyhand" />
+    <EmbeddedResource Include="ExampleUnit\strings-en.tinyhand" />
   </ItemGroup>
 
   <ItemGroup>
