--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,6 +25,8 @@ jobs:
       run: dotnet pack -c Release -o bin Netsphere/Netsphere.csproj
     - name: Package3
       run: dotnet pack -c Release -o bin ZenItz/ZenItz.csproj
+    - name: Package4
+      run: dotnet pack -c Release -o bin LP/LP.csproj
       
     - name: Publish
       run: dotnet nuget push bin/*.nupkg -k ${{secrets.NUGET_API_KEY}} -s https://api.nuget.org/v3/index.json
