--- a/LPEssentials/LPEssentials.csproj
+++ b/LPEssentials/LPEssentials.csproj
@@ -22,8 +22,9 @@
     <PackageReference Include="Arc.CrossChannel" Version="1.0.1" />
     <PackageReference Include="Arc.Threading" Version="0.15.2" />
     <PackageReference Include="Arc.Crypto" Version="1.11.1" />
+    <PackageReference Include="Arc.Unit" Version="0.1.0" />
     <PackageReference Include="BigMachines" Version="0.21.2" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
     <PackageReference Include="SimpleCommandLine" Version="0.14.0" />
     <PackageReference Include="Tinyhand" Version="0.37.2" />
     <PackageReference Include="ValueLink" Version="0.28.4" />
