--- a/.editorconfig
+++ b/.editorconfig
@@ -189,6 +189,8 @@ dotnet_diagnostic.SA1591.severity = suggestion
 dotnet_diagnostic.SA1602.severity = suggestion
 dotnet_diagnostic.SA1405.severity = suggestion
 dotnet_diagnostic.SA1300.severity = suggestion
+dotnet_diagnostic.SA1302.severity = suggestion
+
 
 [*.{cs,vb}]
 csharp_style_namespace_declarations=file_scoped:warning
