--- a/ZenItz/ZenItz.csproj
+++ b/ZenItz/ZenItz.csproj
@@ -4,10 +4,10 @@
     <TargetFramework>net7.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
 
-    <PackageId>ZenItz</PackageId>
+    <PackageId>CrystalData</PackageId>
     <Authors>archi-Doc</Authors>
-    <Product>Zen/Itz</Product>
-    <Description>Zen/Itz is a storage engine for LP.</Description>
+    <Product>CrystalData</Product>
+    <Description>CrystalData is a storage engine for LP.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/archi-Doc/LP</PackageProjectUrl>
     <RepositoryUrl>https://github.com/archi-Doc/LP</RepositoryUrl>
