--- a/Benchmark/Benchmark.csproj
+++ b/Benchmark/Benchmark.csproj
@@ -25,7 +25,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LPEssentials\LPEssentials.csproj" />
-    <ProjectReference Include="..\ZenItz\ZenItz.csproj" />
+    <ProjectReference Include="..\CrystalData\CrystalData.csproj" />
   </ItemGroup>
 
 </Project>
