--- a/LP/LP.csproj
+++ b/LP/LP.csproj
@@ -34,7 +34,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Netsphere\Netsphere.csproj" />
     <ProjectReference Include="..\NetsphereGenerator\NetsphereGenerator.csproj" ReferenceOutputAssembly="false" OutputItemType="Analyzer" />
-    <ProjectReference Include="..\ZenItz\ZenItz.csproj" />
+    <ProjectReference Include="..\CrystalData\CrystalData.csproj" />
   </ItemGroup>
 
   <ItemGroup>
