--- a/CrystalData/CrystalData.csproj
+++ b/CrystalData/CrystalData.csproj
@@ -25,6 +25,7 @@
     <PackageReference Include="Arc.Threading" Version="0.21.1" />
     <PackageReference Include="Arc.Crypto" Version="1.13.0" />
     <PackageReference Include="Arc.Unit" Version="0.5.4" />
+    <PackageReference Include="AWSSDK.S3" Version="3.7.103.36" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="SimpleCommandLine" Version="0.17.2" />
     <PackageReference Include="Tinyhand" Version="0.48.1" />
