--- a/CrystalData/CrystalData.csproj
+++ b/CrystalData/CrystalData.csproj
@@ -38,6 +38,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <EmbeddedResource Include="UserInterface\Strings\strings-en.tinyhand" />
+    <EmbeddedResource Include="UserInterface\Strings\strings-ja.tinyhand" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Remove="Generated\*" />
   </ItemGroup>
 
