--- a/Netsphere/Netsphere.csproj
+++ b/Netsphere/Netsphere.csproj
@@ -24,6 +24,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\LPEssentials\LPEssentials.csproj" />
+    <ProjectReference Include="..\CrystalData\CrystalData.csproj" />
   </ItemGroup>
 
   <ItemGroup>
