--- a/LPEssentials/LPEssentials.csproj
+++ b/LPEssentials/LPEssentials.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="Arc.Crypto" Version="1.16.0" />
     <PackageReference Include="Arc.Unit" Version="0.6.1" />
     <PackageReference Include="BigMachines" Version="0.25.0" />
+    <ProjectReference Include="..\CrystalData\CrystalData.csproj" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
     <PackageReference Include="SimpleCommandLine" Version="0.18.0" />
     <PackageReference Include="Tinyhand" Version="0.52.1" />
