--- a/LP/LP.csproj
+++ b/LP/LP.csproj
@@ -44,9 +44,9 @@
   </ItemGroup>
   
   <ItemGroup>
-    <ProjectReference Include="..\Netsphere.RemoteData\Netsphere.RemoteData.csproj" />
     <ProjectReference Include="..\Netsphere\Netsphere.csproj" />
     <ProjectReference Include="..\NetsphereGenerator\NetsphereGenerator.csproj" ReferenceOutputAssembly="false" OutputItemType="Analyzer" />
+    <ProjectReference Include="..\Netsphere.Remote\Netsphere.Remote.csproj" />
   </ItemGroup>
 
 </Project>
