--- a/Netsphere.Remote/Netsphere.Remote.csproj
+++ b/Netsphere.Remote/Netsphere.Remote.csproj
@@ -4,10 +4,10 @@
     <TargetFramework>net8.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
 
-    <PackageId>Netsphere.RemoteData</PackageId>
+    <PackageId>Netsphere.Remote</PackageId>
     <Authors>archi-Doc</Authors>
-    <Product>Netsphere.RemoteData</Product>
-    <Description>Netsphere.RemoteData</Description>
+    <Product>Netsphere.Remote</Product>
+    <Description>Netsphere.Remote</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageProjectUrl>https://github.com/archi-Doc/LP</PackageProjectUrl>
     <RepositoryUrl>https://github.com/archi-Doc/LP</RepositoryUrl>
