--- a/RemoteDataServer/RemoteDataServer.csproj
+++ b/RemoteDataServer/RemoteDataServer.csproj
@@ -7,9 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Netsphere.RemoteData\Netsphere.RemoteData.csproj" />
     <ProjectReference Include="..\Netsphere\Netsphere.csproj" />
     <ProjectReference Include="..\NetsphereGenerator\NetsphereGenerator.csproj" ReferenceOutputAssembly="false" OutputItemType="Analyzer" />
+    <ProjectReference Include="..\Netsphere.Remote\Netsphere.Remote.csproj" />
   </ItemGroup>
 
   <ItemGroup>
