--- a/LP/LP.csproj
+++ b/LP/LP.csproj
@@ -46,7 +46,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Netsphere\Netsphere.csproj" />
     <ProjectReference Include="..\NetsphereGenerator\NetsphereGenerator.csproj" ReferenceOutputAssembly="false" OutputItemType="Analyzer" />
-    <ProjectReference Include="..\Netsphere.Remote\Netsphere.Remote.csproj" />
+    <ProjectReference Include="..\Netsphere.Interfaces\Netsphere.Interfaces.csproj" />
   </ItemGroup>
 
 </Project>
