--- a/Playground/Playground.csproj
+++ b/Playground/Playground.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LP\LP.csproj" />
+    <ProjectReference Include="..\Lp\Lp.csproj" />
   </ItemGroup>
 
   <ItemGroup>
