--- a/NetsphereGenerator/NetsphereGenerator.csproj
+++ b/NetsphereGenerator/NetsphereGenerator.csproj
@@ -13,8 +13,8 @@
     <Product>NetsphereGenerator</Product>
     <Description>Source generator for Netsphere</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/archi-Doc/LP</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/archi-Doc/LP</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/archi-Doc/Lp</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/archi-Doc/Lp</RepositoryUrl>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 
