--- a/Netsphere/Netsphere.csproj
+++ b/Netsphere/Netsphere.csproj
@@ -7,10 +7,10 @@
     <PackageId>Netsphere</PackageId>
     <Authors>archi-Doc</Authors>
     <Product>Netsphere</Product>
-    <Description>Netsphere is a network protocol for LP.</Description>
+    <Description>Netsphere is a network protocol for Lp.</Description>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageProjectUrl>https://github.com/archi-Doc/LP</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/archi-Doc/LP</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/archi-Doc/Lp</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/archi-Doc/Lp</RepositoryUrl>
     <AllowUnsafeBlocks>True</AllowUnsafeBlocks>
   </PropertyGroup>
 
